--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "docker:up": "docker-compose -f docker/docker-compose.local.yml -p rdf-api up -d",
-    "docker:down": "docker-compose -f docker/docker-compose.local.yml -p rdf-api down"
+    "docker:up": "docker compose -f docker/docker-compose.local.yml -p rdf-api up -d",
+    "docker:down": "docker compose -f docker/docker-compose.local.yml -p rdf-api down"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
