--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 .dockerize: &dockerize
   stage: dockerize
   tags:
-    - docker
+    - deploy
   services:
     - docker:20.10.16-dind
   before_script:
