--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,14 +2,17 @@ stages:
   - dockerize
   - deploy
 
+variables:
+  DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: ''
+
+services:
+  - docker:20.10.16-dind
+
 .dockerize: &dockerize
   stage: dockerize
   tags:
     - deploy
-  services:
-    - docker:20.10.16-dind
-  before_script:
-    - echo $REGISTRY_URL
   script:
     - mkdir keys
     - cp $JWT_PRIVATE_KEY keys/jwt-RS256.key
@@ -27,15 +30,11 @@ Dockerize:
     DOCKER_IMAGE: $REGISTRY_URL$REGISTRY_ROOT/rdf-api
     DOCKERFILE: Dockerfile
     TAG: latest
-    DOCKER_HOST: tcp://docker:2375
-    DOCKER_TLS_CERTDIR: ''
 
 Deploy:
   stage: deploy
   tags:
     - deploy
-  services:
-    - docker:20.10.16-dind
   variables:
     STACK: rdf
   script:
