--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,17 +2,14 @@ stages:
   - dockerize
   - deploy
 
-variables:
-  DOCKER_HOST: tcp://docker:2375
-  DOCKER_TLS_CERTDIR: ''
-
-services:
-  - docker:20.10.16-dind
-
 .dockerize: &dockerize
   stage: dockerize
   tags:
-    - deploy
+    - docker
+  services:
+    - docker:20.10.16-dind
+  before_script:
+    - echo $REGISTRY_URL
   script:
     - mkdir keys
     - cp $JWT_PRIVATE_KEY keys/jwt-RS256.key
