ci: fix docker host

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,8 @@ Dockerize:
     DOCKER_IMAGE: $REGISTRY_URL$REGISTRY_ROOT/rdf-api
     DOCKERFILE: Dockerfile
     TAG: latest
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_TLS_CERTDIR: ''
 
 Deploy:
   stage: deploy
